...
							<Button
								testID={`${testID}-browse`}
								variant="secondary"
								onPress={() => onBrowse?.(config)}
								disabled={config.disabled || !onBrowse}
							>
								BROWSE
							</Button>
						</View>
						{renderHelper()}
					</View>
				);

...
